--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "geojson2dsv": "0.0.0",
     "geojsonhint": "0.3.4",
     "gtfs2geojson": "^1.0.0",
+    "leaflet": "^1.3.1",
     "leaflet-draw": "0.2.3",
     "leaflet-geodesy": "0.1.1",
     "leaflet-hash": "0.2.1",
@@ -47,9 +48,8 @@
     "xtend": "3.0.0"
   },
   "devDependencies": {
-    "parcel-bundler": "^1.8.1",
     "eslint": "^1.10.3",
-    "tape": "~2.12.3"
+    "parcel-bundler": "^1.8.1"
   },
   "scripts": {
     "start": "parcel index.html",
