--- a/package.json
+++ b/package.json
@@ -26,14 +26,14 @@
     "geojsonhint": "0.3.4",
     "gtfs2geojson": "^1.0.0",
     "leaflet": "^1.3.1",
-    "leaflet-draw": "0.2.3",
+    "leaflet-draw": "1.0.2",
     "leaflet-geodesy": "0.1.1",
     "leaflet-hash": "0.2.1",
-    "mapbox.js": "2.2.2",
     "marked": "0.3.2",
     "osmtogeojson": "2.0.5",
     "polyline": "^0.2.0",
     "polytogeojson": "0.0.1",
+    "prettier": "^1.12.1",
     "qs-hash": "0.0.0",
     "shp-write": "0.2.3",
     "store": "1.3.14",
