Build in netlify

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   },
   "scripts": {
     "start": "parcel index.html",
+    "build": "parcel build index.html",
     "test": "eslint src"
   },
   "repository": {
