--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "create and edit maps, on the internet",
   "main": "index.html",
   "dependencies": {
+    "@mapbox/geojsonhint": "^2.1.0",
     "@mapbox/gist-map-browser": "0.2.1",
+    "apollo-cache-inmemory": "^1.2.1",
+    "apollo-client": "^2.3.1",
+    "apollo-link-http": "^1.5.4",
     "bowser": "0.3.2",
     "brfs": "^1.4.3",
     "browser-request": "^0.3.3",
@@ -16,7 +20,8 @@
     "d3-metatable": "^1.0.0",
     "detect-json-indent": "0.0.0",
     "escape-html": "^1.0.1",
-    "filesaver.js": "0.1.0",
+    "file-saver": "^1.3.8",
+    "filesaver.js": "^1.3.4",
     "geojson-extent": "^0.3.1",
     "geojson-flatten": "~0.1.0",
     "geojson-normalize": "0.0.0",
@@ -24,6 +29,8 @@
     "geojson-rewind": "^0.2.0",
     "geojson2dsv": "0.0.0",
     "geojsonhint": "0.3.4",
+    "graphql": "0.11.7 || ^0.12.0 || ^0.13.0",
+    "graphql-tag": "^2.9.2",
     "gtfs2geojson": "^1.0.0",
     "leaflet": "^1.3.1",
     "leaflet-draw": "1.0.2",
@@ -33,10 +40,16 @@
     "polyline": "^0.2.0",
     "polytogeojson": "0.0.1",
     "prettier": "^1.12.1",
+    "prop-types": "^15.5.0",
     "qs-hash": "0.0.0",
+    "react": "^15.x.x || ^16.x.x",
+    "react-apollo": "^2.1.4",
+    "react-dom": "^16.3.2",
+    "react-table": "^6.8.2",
     "sanitize-caja": "^0.1.4",
     "shp-write": "0.2.3",
     "store": "1.3.14",
+    "tachyons": "^4.9.1",
     "togeojson": "0.5.0",
     "togpx": "0.5.4",
     "tokml": "0.3.0",
@@ -47,13 +60,16 @@
     "xtend": "3.0.0"
   },
   "devDependencies": {
-    "eslint": "^4.19.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "jest": "^22.4.4",
     "parcel-bundler": "^1.8.1"
   },
   "scripts": {
     "start": "parcel index.html",
     "build": "parcel build index.html",
-    "test": "eslint src"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
