--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "prettier": "^1.12.1",
     "prop-types": "^15.5.0",
     "qs-hash": "0.0.0",
-    "react": "^15.x.x || ^16.x.x",
+    "react": "^15.0.0 || ^16.0.0",
     "react-apollo": "^2.1.4",
     "react-dom": "^16.3.2",
     "react-table": "^6.8.2",
