--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@mapbox/geojsonhint": "^2.1.0",
     "@mapbox/gist-map-browser": "0.2.1",
+    "@mapbox/polyline": "^1.0.0",
     "apollo-cache-inmemory": "^1.2.1",
     "apollo-client": "^2.3.1",
     "apollo-link-http": "^1.5.4",
