--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gtfs2geojson": "^1.0.0",
     "leaflet": "^1.3.1",
     "leaflet-draw": "1.0.2",
+    "leaflet-editable": "^1.1.0",
     "leaflet-geodesy": "0.1.1",
     "leaflet-hash": "0.2.1",
     "osmtogeojson": "2.0.5",
