--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@mapbox/geojsonhint": "^2.1.0",
     "@mapbox/gist-map-browser": "0.2.1",
+    "@mapbox/polyline": "^1.0.0",
     "apollo-cache-inmemory": "^1.2.1",
     "apollo-client": "^2.3.1",
     "apollo-link-http": "^1.5.4",
@@ -32,6 +33,7 @@
     "graphql": "0.11.7 || ^0.12.0 || ^0.13.0",
     "graphql-tag": "^2.9.2",
     "gtfs2geojson": "^1.0.0",
+    "json-stringify-pretty-compact": "^1.1.0",
     "leaflet": "^1.3.1",
     "leaflet-draw": "1.0.2",
     "leaflet-geodesy": "0.1.1",
