--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "graphql": "0.11.7 || ^0.12.0 || ^0.13.0",
     "graphql-tag": "^2.9.2",
     "gtfs2geojson": "^1.0.0",
+    "json-stringify-pretty-compact": "^1.1.0",
     "leaflet": "^1.3.1",
     "leaflet-draw": "1.0.2",
     "leaflet-editable": "^1.1.0",
