--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@mapbox/geojsonhint": "^2.1.0",
     "@mapbox/gist-map-browser": "0.2.1",
     "@mapbox/polyline": "^1.0.0",
+    "antd": "^3.5.3",
     "apollo-cache-inmemory": "^1.2.1",
     "apollo-client": "^2.3.1",
     "apollo-link-http": "^1.5.4",
@@ -63,6 +64,7 @@
     "xtend": "3.0.0"
   },
   "devDependencies": {
+    "babel-plugin-import": "^1.7.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
