--- a/package.json
+++ b/package.json
@@ -11,10 +11,6 @@
     "apollo-client": "^2.3.1",
     "apollo-link-http": "^1.5.4",
     "bowser": "0.3.2",
-    "brfs": "^1.4.3",
-    "browser-request": "^0.3.3",
-    "clean-css": "~2.0.7",
-    "clone": "0.1.16",
     "codemirror": "^5.37.0",
     "csv2geojson": "3.6.1",
     "detect-json-indent": "0.0.0",
@@ -42,22 +38,20 @@
     "prettier": "^1.12.1",
     "prop-types": "^15.5.0",
     "qs-hash": "0.0.0",
-    "react": "^15.0.0 || ^16.0.0",
+    "react": ">=0.14.0",
     "react-apollo": "^2.1.4",
     "react-dom": "^16.3.2",
+    "react-dropzone": "^4.2.10",
     "react-json-view": "^1.16.6",
     "sanitize-caja": "^0.1.4",
     "shp-write": "0.2.3",
-    "store": "1.3.14",
     "tachyons": "^4.9.1",
     "togeojson": "0.5.0",
     "togpx": "0.5.4",
     "tokml": "0.3.0",
     "topojson": "^3.0.2",
-    "treeui": "^0.1.1",
     "wellknown": "0.3.1",
-    "wkx": "^0.4.1",
-    "xtend": "3.0.0"
+    "wkx": "^0.4.1"
   },
   "devDependencies": {
     "@storybook/react": "^3.4.6",
