--- a/package.json
+++ b/package.json
@@ -10,29 +10,28 @@
     "apollo-cache-inmemory": "^1.2.1",
     "apollo-client": "^2.3.1",
     "apollo-link-http": "^1.5.4",
-    "bowser": "0.3.2",
+    "bowser": "1.9.3",
     "codemirror": "^5.37.0",
-    "csv2geojson": "3.6.1",
-    "detect-json-indent": "0.0.0",
+    "csv2geojson": "5.0.2",
+    "detect-json-indent": "0.0.3",
     "escape-html": "^1.0.1",
     "file-saver": "^1.3.8",
     "filesaver.js": "^1.3.4",
     "geojson-extent": "^0.3.1",
-    "geojson-flatten": "~0.1.0",
-    "geojson-normalize": "0.0.0",
-    "geojson-random": "0.1.0",
-    "geojson-rewind": "^0.2.0",
-    "geojson2dsv": "0.0.0",
-    "geojsonhint": "0.3.4",
+    "geojson-flatten": "~0.2.2",
+    "@mapbox/geojson-normalize": "0.0.1",
+    "geojson-random": "0.4.0",
+    "geojson-rewind": "^0.3.1",
+    "geojson2dsv": "0.1.0",
     "graphql": "0.11.7 || ^0.12.0 || ^0.13.0",
     "graphql-tag": "^2.9.2",
-    "gtfs2geojson": "^1.0.0",
+    "gtfs2geojson": "^2.0.0",
     "json-stringify-pretty-compact": "^1.1.0",
     "leaflet": "^1.3.1",
     "leaflet-editable": "^1.1.0",
-    "leaflet-geodesy": "0.1.1",
+    "leaflet-geodesy": "0.2.1",
     "leaflet-hash": "0.2.1",
-    "osmtogeojson": "2.0.5",
+    "osmtogeojson": "3.0.0-beta.3",
     "polyline": "^0.2.0",
     "polytogeojson": "0.0.1",
     "prettier": "^1.12.1",
@@ -44,13 +43,13 @@
     "react-dropzone": "^4.2.10",
     "react-json-view": "^1.16.6",
     "sanitize-caja": "^0.1.4",
-    "shp-write": "0.2.3",
+    "shp-write": "0.3.2",
     "tachyons": "^4.9.1",
-    "togeojson": "0.5.0",
+    "@mapbox/togeojson": "0.16.0",
     "togpx": "0.5.4",
-    "tokml": "0.3.0",
+    "tokml": "0.4.0",
     "topojson": "^3.0.2",
-    "wellknown": "0.3.1",
+    "wellknown": "0.5.0",
     "wkx": "^0.4.1"
   },
   "devDependencies": {
@@ -58,7 +57,7 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "jest": "^22.4.4",
+    "jest": "^23.0.1",
     "parcel-bundler": "^1.8.1",
     "storybook": "^1.0.0"
   },
