--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "main": "index.html",
   "dependencies": {
     "@mapbox/geojson-area": "^0.2.2",
+    "@mapbox/geojson-normalize": "0.0.1",
     "@mapbox/geojsonhint": "^2.1.0",
     "@mapbox/polyline": "^1.0.0",
+    "@mapbox/togeojson": "0.16.0",
+    "@turf/simplify": "^5.1.5",
     "apollo-cache-inmemory": "^1.2.1",
     "apollo-client": "^2.3.1",
     "apollo-link-http": "^1.5.4",
@@ -19,7 +22,6 @@
     "filesaver.js": "^1.3.4",
     "geojson-extent": "^0.3.1",
     "geojson-flatten": "~0.2.2",
-    "@mapbox/geojson-normalize": "0.0.1",
     "geojson-random": "0.4.0",
     "geojson-rewind": "^0.3.1",
     "geojson2dsv": "0.1.0",
@@ -45,7 +47,6 @@
     "sanitize-caja": "^0.1.4",
     "shp-write": "0.3.2",
     "tachyons": "^4.9.1",
-    "@mapbox/togeojson": "0.16.0",
     "togpx": "0.5.4",
     "tokml": "0.4.0",
     "topojson": "^3.0.2",
