--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "apollo-cache-inmemory": "^1.2.1",
     "apollo-client": "^2.3.1",
     "apollo-link-http": "^1.5.4",
+    "auth0-js": "^9.6.1",
+    "babel-plugin-syntax-object-rest-spread": "^6.13.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "bowser": "1.9.3",
     "codemirror": "^5.37.0",
     "csv2geojson": "5.0.2",
@@ -28,6 +31,7 @@
     "graphql": "0.11.7 || ^0.12.0 || ^0.13.0",
     "graphql-tag": "^2.9.2",
     "gtfs2geojson": "^2.0.0",
+    "history": "^4.7.2",
     "json-stringify-pretty-compact": "^1.1.0",
     "leaflet": "^1.3.1",
     "leaflet-editable": "^1.1.0",
@@ -59,7 +63,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "jest": "^23.0.1",
-    "parcel-bundler": "^1.8.1",
+    "parcel-bundler": "^1.9.0",
     "storybook": "^1.0.0"
   },
   "scripts": {
