--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,11 @@
 {
-  "plugins": ["transform-class-properties"],
+  "plugins": [
+    "transform-class-properties",
+    ["transform-runtime",
+        {
+            "polyfill": false,
+            "regenerator": true
+        }]
+  ],
   "presets": ["env", "react"]
 }
