--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "auth0-js": "^9.6.1",
     "babel-plugin-syntax-object-rest-spread": "^6.13.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-runtime": "^6.26.0",
     "bowser": "1.9.3",
     "codemirror": "^5.37.0",
     "csv2geojson": "5.0.2",
