--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-json-view": "^1.16.6",
     "sanitize-caja": "^0.1.4",
     "shp-write": "0.3.2",
+    "standard-version": "^4.4.0",
     "tachyons": "^4.9.1",
     "togpx": "0.5.4",
     "tokml": "0.4.0",
@@ -76,7 +77,7 @@
     "type": "git",
     "url": "git://github.com/tmcw/geojson.net.git"
   },
-  "author": "MapBox",
+  "author": "Tom MacWright",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/tmcw/geojson.net/issues"
