--- a/package.json
+++ b/package.json
@@ -19,9 +19,14 @@
     "babel-runtime": "^6.26.0",
     "bowser": "1.9.3",
     "codemirror": "^5.37.0",
+    "cookie-session": "^2.0.0-beta.3",
     "csv2geojson": "5.0.2",
     "detect-json-indent": "0.0.3",
+    "env-cmd": "^8.0.2",
     "escape-html": "^1.0.1",
+    "express": "^4.16.3",
+    "express-http-proxy": "^1.2.0",
+    "express-session": "^1.15.6",
     "file-saver": "^1.3.8",
     "filesaver.js": "^1.3.4",
     "geojson-extent": "^0.3.1",
@@ -37,10 +42,13 @@
     "leaflet-editable": "^1.1.0",
     "leaflet-geodesy": "0.2.1",
     "leaflet-hash": "0.2.1",
+    "nodemon": "^1.17.5",
     "osmtogeojson": "3.0.0-beta.3",
+    "passport": "^0.4.0",
+    "passport-github": "^1.1.0",
     "polyline": "^0.2.0",
     "polytogeojson": "0.0.1",
-    "prettier": "1.7.4",
+    "prettier": "1.13.7",
     "prop-types": "^15.5.0",
     "qs-hash": "0.0.0",
     "react": ">=0.14.0",
@@ -68,7 +76,7 @@
     "storybook": "^1.0.0"
   },
   "scripts": {
-    "start": "parcel index.html",
+    "start": "env-cmd .env node server.js",
     "build": "parcel build index.html",
     "test": "jest",
     "storybook": "start-storybook -p 9001"
