--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "leaflet-geodesy": "0.2.1",
     "leaflet-hash": "0.2.1",
     "nodemon": "^1.17.5",
+    "now-env": "^3.1.0",
     "osmtogeojson": "3.0.0-beta.3",
     "passport": "^0.4.0",
     "passport-github": "^1.1.0",
@@ -74,8 +75,8 @@
     "storybook": "^1.0.0"
   },
   "scripts": {
-    "start": "env-cmd .env node server.js",
-    "build": "parcel build index.html",
+    "start": "node server.js",
+    "build": "parcel build",
     "test": "jest",
     "storybook": "start-storybook -p 9001"
   },
