Always alias to geojson.net

--- a/now.json
+++ b/now.json
@@ -1,4 +1,5 @@
 {
+  "alias": "geojson.net",
   "env": {
     "GITHUB_CLIENT_ID": "@geojsonnet-github-client-id",
     "GITHUB_CLIENT_SECRET": "@geojsonnet-github-client-secret",
