Move more to now

--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "apollo-client": "^2.3.1",
     "apollo-link-http": "^1.5.4",
     "babel-plugin-syntax-object-rest-spread": "^6.13.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
     "babel-runtime": "^6.26.0",
     "bowser": "1.9.4",
     "codemirror": "^5.37.0",
     "csv2geojson": "5.0.2",
+    "deep-equal": "^1.0.1",
     "detect-json-indent": "0.0.3",
     "env-cmd": "^8.0.2",
     "escape-html": "^1.0.1",
@@ -40,9 +44,8 @@
     "leaflet-editable": "^1.1.0",
     "leaflet-geodesy": "0.2.1",
     "leaflet-hash": "0.2.1",
-    "nodemon": "^1.17.5",
-    "now-env": "^3.1.0",
     "osmtogeojson": "3.0.0-beta.3",
+    "parcel-bundler": "^1.8.1",
     "passport": "^0.4.0",
     "passport-github": "^1.1.0",
     "polyline": "^0.2.0",
@@ -57,7 +60,6 @@
     "react-json-view": "^1.16.6",
     "sanitize-caja": "^0.1.4",
     "shp-write": "0.3.2",
-    "standard-version": "^4.4.0",
     "tachyons": "^4.9.1",
     "togpx": "0.5.4",
     "tokml": "0.4.0",
@@ -67,11 +69,9 @@
   },
   "devDependencies": {
     "@storybook/react": "^3.4.6",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
     "jest": "^23.0.1",
-    "parcel-bundler": "^1.8.1",
+    "now-env": "^3.1.0",
+    "standard-version": "^4.4.0",
     "storybook": "^1.0.0"
   },
   "scripts": {
