--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "geojson-net",
-  "version": "0.1.1",
+  "version": "0.0.0",
   "description": "create and edit maps, on the internet",
   "main": "index.html",
   "dependencies": {
@@ -14,16 +14,23 @@
     "apollo-client": "^2.3.1",
     "apollo-link-http": "^1.5.4",
     "babel-plugin-syntax-object-rest-spread": "^6.13.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
     "babel-runtime": "^6.26.0",
-    "bowser": "1.9.3",
+    "bowser": "1.9.4",
     "codemirror": "^5.37.0",
     "csv2geojson": "5.0.2",
+    "deep-equal": "^1.0.1",
     "detect-json-indent": "0.0.3",
+    "env-cmd": "^8.0.2",
     "escape-html": "^1.0.1",
+    "express": "^4.16.3",
+    "express-http-proxy": "^1.2.0",
+    "express-session": "^1.15.6",
     "file-saver": "^1.3.8",
-    "filesaver.js": "^1.3.4",
     "geojson-extent": "^0.3.1",
     "geojson-flatten": "~0.2.2",
     "geojson-random": "0.4.0",
@@ -38,9 +45,12 @@
     "leaflet-geodesy": "0.2.1",
     "leaflet-hash": "0.2.1",
     "osmtogeojson": "3.0.0-beta.3",
+    "parcel-bundler": "^1.8.1",
+    "passport": "^0.4.0",
+    "passport-github": "^1.1.0",
     "polyline": "^0.2.0",
     "polytogeojson": "0.0.1",
-    "prettier": "1.7.4",
+    "prettier": "1.13.7",
     "prop-types": "^15.5.0",
     "qs-hash": "0.0.0",
     "react": ">=0.14.0",
@@ -50,7 +60,6 @@
     "react-json-view": "^1.16.6",
     "sanitize-caja": "^0.1.4",
     "shp-write": "0.3.2",
-    "standard-version": "^4.4.0",
     "tachyons": "^4.9.1",
     "togpx": "0.5.4",
     "tokml": "0.4.0",
@@ -60,15 +69,13 @@
   },
   "devDependencies": {
     "@storybook/react": "^3.4.6",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
     "jest": "^23.0.1",
-    "parcel-bundler": "^1.8.1",
+    "now-env": "^3.1.0",
+    "standard-version": "^4.4.0",
     "storybook": "^1.0.0"
   },
   "scripts": {
-    "start": "parcel index.html",
+    "start": "node server.js",
     "build": "parcel build index.html",
     "test": "jest",
     "storybook": "start-storybook -p 9001"
