--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-runtime": "^6.26.0",
     "bowser": "1.9.4",
     "codemirror": "^5.37.0",
+    "cookie-parser": "^1.4.3",
     "csv2geojson": "5.0.2",
     "deep-equal": "^1.0.1",
     "detect-json-indent": "0.0.3",
@@ -29,6 +30,7 @@
     "escape-html": "^1.0.1",
     "express": "^4.16.3",
     "express-http-proxy": "^1.2.0",
+    "express-jwt": "^5.3.1",
     "express-session": "^1.15.6",
     "file-saver": "^1.3.8",
     "geojson-extent": "^0.3.1",
@@ -40,6 +42,7 @@
     "graphql-tag": "^2.9.2",
     "gtfs2geojson": "^2.0.0",
     "json-stringify-pretty-compact": "^1.1.0",
+    "jsonwebtoken": "^8.4.0",
     "leaflet": "^1.3.1",
     "leaflet-editable": "^1.1.0",
     "leaflet-geodesy": "0.2.1",
@@ -48,6 +51,7 @@
     "parcel-bundler": "^1.8.1",
     "passport": "^0.4.0",
     "passport-github": "^1.1.0",
+    "passport-jwt": "^4.0.0",
     "polyline": "^0.2.0",
     "polytogeojson": "0.0.1",
     "prettier": "1.13.7",
@@ -78,7 +82,8 @@
     "start": "node server.js",
     "build": "parcel build index.html",
     "test": "jest",
-    "storybook": "start-storybook -p 9001"
+    "storybook": "start-storybook -p 9001",
+    "now-build": "yarn build"
   },
   "repository": {
     "type": "git",
