--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,6 @@
 {
   "plugins": [
-    "transform-class-properties",
-    ["transform-runtime",
-        {
-            "polyfill": false,
-            "regenerator": true
-        }]
+    "transform-class-properties"
   ],
   "presets": ["env", "react"]
 }
